2007-05-10  Fernando Perez  <Fernando.Perez@colorado.edu>

	* ipython.1: update man page and full manual with information
	about threads (remove outdated warning).  Closes #151.

2007-05-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Extensions/ipy_constants.py: Add Gael's constants module
	in trunk (note that this made it into the 0.8.1 release already,
	but the changelogs didn't get coordinated).  Many thanks to Gael
	Varoquaux <gael.varoquaux-AT-normalesup.org>

2007-05-09  *** Released version 0.8.1

2007-05-10  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/igrid.py: Incorporate html help into
	the module, so we don't have to search for the file.

2007-05-02  Fernando Perez  <Fernando.Perez@colorado.edu>

	* test/test_irunner.py (RunnerTestCase._test_runner): Close #147.

2007-04-30  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: (pre_config_initialization) Catch UnicodeDecodeError if the
	user has illegal (non-ascii) home directory name

2007-04-27  Ville Vainio  <vivainio@gmail.com>

	* platutils_win32.py: implement set_term_title for windows
	
	* Update version number
	
	* ipy_profile_sh.py: more informative prompt (2 dir levels)

2007-04-26  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/igrid.py: (igrid) Fix bug that surfaced
	when the igrid input raised an exception. (Patch by Nik Tautenhahn,
	bug discovered by Ville).

2007-04-26  Ville Vainio  <vivainio@gmail.com>

	* Extensions/ipy_completers.py: Olivier's module completer now
	saves the list of root modules if it takes > 4 secs on the first run.
	
	* Magic.py (%rehashx): %rehashx now clears the completer cache
	

2007-04-26  Fernando Perez  <Fernando.Perez@colorado.edu>

	* ipython.el: fix incorrect color scheme, reported by Stefan.
	Closes #149.

	* IPython/PyColorize.py (Parser.format2): fix state-handling
	logic.  I still don't like how that code handles state, but at
	least now it should be correct, if inelegant.  Closes #146.
